alignment fix

--- a/wp-content/themes/toppeq/scss/theme/_mainslider.scss
+++ b/wp-content/themes/toppeq/scss/theme/_mainslider.scss
@@ -164,7 +164,7 @@
         }
       }
     }
-    &.a{
+    // &.a{
       .item-text{
         h1{
           @media (min-width: 1200px) {
@@ -172,7 +172,7 @@
           }
         }
       }
-    }
+    // }
   }  
 }
 
